<resources>
    <string name="app_name">Drevmass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstScreenTitle">Избавьтесь от боли в спине раз и навсегда!</string>
    <string name="firstScreenDescription">Здоровье спины – это один из основных показателей комфорта жизни</string>
    <string name="secondScreenTitle">Наша цель</string>
    <string name="secondScreenDescription">Здоровье спины – это один из основных показателей комфорта жизни</string>
    <string name="thirdScreenTitle">Спина требует ежедневного ухода!</string>
    <string name="thirdScreenDescription">Здоровье спины – это один из основных показателей комфорта жизни.</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="authorizeMsg">Мы с вами научимся заниматься на тренажере-массажере для спины Древмасс.</string>
    <string name="registerPassHint">Придумайте пороль</string>
    <string name="nameHint">Ваше имя</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Номер телефона</string>
    <string name="next">Продолжить</string>
    <string name="linkLogin">Уже есть аккаунт?\u0020</string>
    <string name="returnMsg">С возвращением!</string>
    <string name="password">Пороль</string>
    <string name="forgotPass">Забыли пороль?</string>
    <string name="linkRegistration">Еще нет аккаунта?\u0020</string>
    <string name="wrongEmailOrPassword">Неверный логин или пароль</string>
    <string name="info_bonus_program">Мы на рынке с 2012 года. С маленького цеха наше производство стало мини-заводом, а наш массажер стал входить в реестр медицинских изделий.\n\n
        За эти годы мы продали более 50000 массажеров и получили более 1000 отзывов. Когда мы начинали, то даже и представить не могли насколько полезную вещь мы делаем. Отзывы людей и истории выздоровлений нас очень вдохновляют.Мы уже сняли более 100 отзывов и интервью с нашими клиентами на нашем Ютуб канале. Каждый год растём и улучшаем продукт.\n\n
        «Мне хочется, чтобы каждый человек смог легко и просто избавиться от боли в спине. Избежать крупных трат и поддерживать здоровье своего позвоночника каждый день. Древмасс это один из простых способов. Это как основа и фундамент. Он позволяет сначала Вам избавится от боли, а потом начать применять другие методы оздоровления, тем самым внедряя в вашу жизнь культуру ухода за телом. Причина всех болезней кроется внутри нас самих, а основной причиной является банальная лень. За свой продукт и за то, что я делаю, я отвечаю своим именем.»</string>
    <string name="recoverPass">Сбросить пороль</string>
    <string name="forgotPassMsg">Введите email для сброса пароля.</string>
    <string name="recoverPassMsg">На почту kate.shel@mail.ru мы отправили инструкцию для сброса пароля.</string>
    <string name="itsClear">Понятно</string>
    <string name="costExample">12 900 ₽</string>
    <string name="catalog">Каталог</string>
    <string name="byPopularity">По популярности</string>

    <string name="toCart">В корзину</string>
    <string name="howToUse">Как использовать?</string>
    <string name="size">Размер</string>
    <string name="height">Рост</string>
    <string name="heightSample">от 50-180 см</string>
    <string name="sizeSample">16 см х 8 см</string>
    <string name="descriprion">Описание</string>
    <string name="descriprionSample">Массажер Древмасс - это эффективный тренажер, изготовленный из дерева бука, который представляет собой конструкцию из 5-ти роликов, закрепленных на деревянной раме и оснащенный удобной опорной рукояткой.\nОн является идеальным решением для тренировки различных групп мышц, включая спину, ноги. пресс, ягодицы и многое другое. Массажер Древмасс не только помогает укрепить мышцы спины и снять нагрузку с позвоночника, но и является универсальным тренажером для всего тела.</string>
    <string name="buyWithIt">С этим товаром покупают</string>
    <string name="basket">Корзина</string>
    <string name="takeBonus">Списать бонусы</string>
    <string name="bonusDescription">Баллами можно оплатить до 30% от стоимости заказа.</string>
    <string name="enterPromocode">Ввести промокод</string>
    <string name="payWithBonus">Оплата бонусами</string>
    <string name="total">Итого</string>
    <string name="arrange">Оформить</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enterPromocodeEditText">Введите промокод</string>
    <string name="use">Применить</string>
    <string name="recipient">Получатель</string>
    <string name="recipientMe">Получу я</string>
    <string name="recipientOther">Другой получатель</string>
    <string name="name">Имя</string>
    <string name="sendRequest">Отправить заявку</string>
    <string name="orderConfirmed">Ваш заказ принят</string>
    <string name="orderConfirmedDescription">Сейчас на ваш номер должна прийти смс с номера Drevmass. Наши менеджеры свяжутся с Вами в ближайшее время.</string>
    <string name="orderMaking">Оформление заказа</string>


    <string name="about_company_text">Мы на рынке с 2012 года. С маленького цеха наше производство стало мини-заводом, а наш массажер стал входить в реестр медицинских изделий.\nЗа эти годы мы продали более 50000 массажеров и получили более 1000 отзывов. Когда мы начинали, то даже и представить не могли насколько полезную вещь мы делаем. Отзывы людей и истории выздоровлений нас очень вдохновляют.Мы уже сняли более 100 отзывов и интервью с нашими клиентами на нашем Ютуб канале. Каждый год растём и улучшаем продукт.\n«Мне хочется, чтобы каждый человек смог легко и просто избавиться от боли в спине. Избежать крупных трат и поддерживать здоровье своего позвоночника каждый день. Древмасс это один из простых способов. Это как основа и фундамент. Он позволяет сначала Вам избавится от боли, а потом начать применять другие методы оздоровления, тем самым внедряя в вашу жизнь культуру ухода за телом. Причина всех болезней кроется внутри нас самих, а основной причиной является банальная лень. За свой продукт и за то, что я делаю, я отвечаю своим именем.»</string>
    <string name="have_promocode_button">У меня есть промокод</string>
    <string name="btn_registration">Продолжить</string>
    <string name="text_course_end">Вы успешно прошли курс и получаете 500 бонусов</string>
    <string name="sort_by_popularity">По популярности</string>
    <string name="sort_by_price">По возрастанию цены</string>
    <string name="sort_by_price_down">По убыванию цены</string>
    <string name="inCart">В корзине</string>
    <string name="sort">Сортировка</string>
    <string name="emptyBasket">В корзине пока ничего нет</string>
    <string name="goToCatalog">Перейти в каталог</string>
    <string name="emptyBasketMsg">Наполните её товарами из каталога</string>
</resources>