<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.authorization.RegistrationFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@color/white_1000"
        android:layout_marginTop="9dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/notificationBar"
        layout="@layout/notification_bar"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="28sp"
        android:fontFamily="@font/sfprodisplaybold"
        android:textColor="@color/dark_900"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvRegistrationMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorizeMsg"
        android:textSize="15sp"
        android:fontFamily="@font/sfprotextregular"
        android:textColor="@color/gray_800"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistration"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrationMsg">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="17sp"
            android:fontFamily="@font/sfprotextsemibold"
            android:hint="@string/nameHint"
            android:backgroundTint="@color/gray_500"
            android:textColorHint="@color/gray_600"
            android:drawableStart="@drawable/ic_profile"
            android:drawablePadding="12dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:fontFamily="@font/sfprotextsemibold"
            android:hint="@string/emailHint"
            android:backgroundTint="@color/gray_500"
            android:textColorHint="@color/gray_600"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="12dp"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="15"
            android:textSize="17sp"
            android:fontFamily="@font/sfprotextsemibold"
            android:hint="@string/phoneHint"
            android:backgroundTint="@color/gray_500"
            android:textColorHint="@color/gray_600"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:fontFamily="@font/sfprotextsemibold"
            android:hint="@string/registerPassHint"
            android:backgroundTint="@color/gray_500"
            android:textColorHint="@color/gray_600"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_show"
            android:drawablePadding="12dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/sh_btn_radius50dp"
        android:backgroundTint="@color/brand_700"
        android:text="@string/next"
        android:layout_marginHorizontal="32dp"
        android:textAllCaps="false"
        android:textColor="@color/white_1000"
        android:textSize="17sp"
        android:fontFamily="@font/sfprotextsemibold"
        android:layout_marginBottom="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprotextsemibold"
            android:text="@string/linkLogin"
            android:textColor="@color/dark_900"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfprotextsemibold"
            android:textColor="@color/brand_900"
            android:text="@string/enter"
            android:textSize="15sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>