<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sh_bottomsheet_background"
    android:paddingBottom="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.authorization.PasswordRecoveredBottomsheet">

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:background="@drawable/divider_13dp_grey"
        android:layout_marginTop="-8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRecoverPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recoverPass"
        android:textSize="28sp"
        android:fontFamily="@font/sfprodisplaybold"
        android:textColor="@color/dark_900"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvRecoverPassMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recoverPassMsg"
        android:textSize="15sp"
        android:fontFamily="@font/sfprotextregular"
        android:textColor="@color/gray_800"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecoverPass"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/sh_btn_radius50dp"
        android:backgroundTint="@color/brand_900"
        android:text="@string/itsClear"
        android:layout_margin="24dp"
        android:textAllCaps="false"
        android:textColor="@color/white_1000"
        android:textSize="17sp"
        android:fontFamily="@font/sfprotextsemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecoverPassMsg"/>

</androidx.constraintlayout.widget.ConstraintLayout>